--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-       
+         <img width="[100%]" src="./bg (3).png" alt="">
 </body>
 </html>
