--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,47 @@
     <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-         <img width="[100%]" src="./bg (3).png" alt="">
+         <img class="w-[100%] h-[100vh]" src="./bg (3).png" alt="">
+         <img class="absolute top-[10vh] left-[45%] w-[10%]" src="./projeco-logo.png" alt="">
+         <h1 class="text-white text-4xl absolute top-[40vh] left-[35%]"><b>PARTNER  WITH  KONSTUCT</b></h1>
+         <h1 class="text-white absolute top-[50vh] left-[37%]"><b>An award-winning construction management firm</b></h1>
+         <h1 class="text-white absolute top-[81vh] left-[47%]"><b>Scroll down</b></h1>
+         <div class="items-center justify-around flex">
+            <img src="./projeco-logo-black.png" alt="">
+            <div class="flex justify-between gap-[15vh] my-[5vh]">
+                <p><b>Home</b></p>
+                <p class="text-sky-500"><b>About</b></p>
+                <p><b>SERVICES</b></p>
+                <p><b>WORK</b></p>
+                <p><b>CONTACT</b></p>
+            </div>
+         </div>
+         <hr>
+         <h1 class="my-[5vh] ml-[48%] text-3xl"><b>OUR STORY</b></h1>
+         <p class="h-[2px] w-[8%] bg-sky-600 ml-[49.7%]"></p>
+         <div class="flex justify-center gap-[25vh] my-[10vh] items-center">
+            <div>
+                <p><b>Founded in 2011 by John Mathew Smith, <br> Konstruct has become the number one <br> construction management firm</b></p> <br>
+                <p class="text-zinc-600">
+                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br>
+                   nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.<br>
+                   Lorem ipsum dolor sit amet,consectetuer adipiscing elit, sed diam<br>
+                   nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.
+                </p>
+             </div>
+             <div class="flex gap-[5vh]">
+                <img src="./plan.png" alt="">
+                <img src="./manage.png" alt="">
+                <img src="./deliver.png" alt="">
+             </div>
+         </div>
+         <div class="flex justify-around">
+           <div>
+                <h1 class="text-3xl"><b>OUR STORY</b></h1>
+                <p class="h-[2px] w-[68%] bg-sky-600 "></p>
+           </div>
+           <p class="text-zinc-600">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br> nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+           <button class="px-[5vh] py-[1vh] bg-sky-600 text-white">ALL SERVICES</button>
+         </div>
 </body>
 </html>
